--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!--======== CSS Files ========-->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/skins/color-1.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- =======Stye Switcher======= -->
   <link rel="stylesheet" href="css/skins/color-1.css" class="alternate-style" title="color-1" disabled>
   <link rel="stylesheet" href="css/skins/color-2.css" class="alternate-style" title="color-2" disabled>
@@ -23,7 +23,7 @@
   <!--======== aside start ========-->
   <div class="aside">
     <div class="logo">
-      <a href="#"><span>t</span>hadz</a>
+      <a href="#"><span>T</span>hadz</a>
     </div>
     <div class="nav-toggler">
       <span></span>
@@ -32,7 +32,7 @@
 <li><a href="#home" class="active"><i class="fa fa-home"></i> Home</a></li>
 <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
 <li><a href="#services"><i class="fa fa-list"></i>Services</a></li>
-<li><a href="#portfolio"><i class="fa fa-briefcase"></i>Portfolio</a></li>
+<li><a href="#portfolio"><i class="fa fa-briefcase"></i>Certificates</a></li>
 <li><a href="#contacts"><i class="fa fa-comments"></i>Contacts</a></li>
 
     </ul>
@@ -45,11 +45,13 @@
   <div class="container">
     <div class="row">
       <div class="home-info padd-15">
-        <h3 class="hello">hello, my name is <span class="name">thadz</span></h3>
+        <h3 class="hello">Hello, My name is <span class="name">Thadz</span></h3>
         <h3 class="my-professsion">
           I'm a <span class="typing"> web designer</span>
         </h3>
-        <p>I'm a web designer with experience for 1 year. my expertise is to create and design website. graphic design and many more...</p>
+        <p>Enthusiastic Self Taught Web Developer from the City of Muntinlupa, with 6 months of experience in web development and design and a Certifacte holder of Web Development NC-III.
+        </p>
+          <p>Obtained other Certification from the Project Sparta of Department of Information and Communications Technology and The University of the Philippines - Open University (UPOU). Looking to deliver excellent web development skills using Html,Css and JavaScript with other known Framweworks and by Seeking to further improve skills as the future front-end Web Developer at your Company. </p>
         <a href="#contact" class="btn"> Download CV</a>
       </div>
       <div class="home-img padd-15">
@@ -72,7 +74,11 @@
             <div class="row">
               <div class="about-txt padd-15">
                 <h3>I'm Thadeus Bayonito <span>Web Developer</span></h3>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolore blanditiis quo dignissimos, tempore nostrum illo beatae ad vero ducimus minima qui libero ipsum dolor mollitia, ipsam perspiciatis error laudantium pariatur obcaecati nisi doloribus. Vel esse sed voluptatum similique tempora qui!</p>
+                <p>Implemented websites, mobile applications, and landing pages from concept through deployment.
+                  Standardized all output with a new, responsive, mobile-first approach and strategy.
+                  Assessed UX and UI designs for technical feasibility.
+                  Developed standard and ad hoc reports in graph format as required.
+                  Collaborated with product team members to implement new feature developments.</p>
               </div>
             </div>
             <div class="row">
@@ -303,12 +309,12 @@
       <div class="container">
         <div class="row">
           <div class="section-title padd-15">
-            <h2>portfolio</h2>
+            <h2>CERTICATES</h2>
           </div>
         </div>
         <div class="row">
           <div class="portfolio-heading">
-            <h2>My last Projects :</h2>
+            <h2>Certificates & Trainings</h2>
           </div>
         </div>
         <div class="row">
@@ -334,7 +340,7 @@
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
-                <img src="images/certificate-sparta-analytics1024_1.jpg" alt="">
+                <img src="images/certificate-sparta-new.jpg" alt="">
               </div>
             </div>
           </div>
@@ -352,7 +358,7 @@
           <div class="portfolio-item padd-15">
             <div class="portfolio-item-inner shadow-dark">
               <div class="portfolio-img">
-                <img src="images/portfolio-5.jpg" alt="">
+                <img src="images/sparta11024_1.jpg" alt="">
               </div>
             </div>
           </div>
@@ -384,15 +390,15 @@
           <!--====== contact info item start ======-->
           <div class="contact-info-item padd-15">
             <div class="icon"><i class="fa fa-phone"></i></div>
-            <h4>Call Us On</h4>
+            <h4>Call Me</h4>
             <p>+0951 917 9743</p>
           </div>
           <!--====== contact info item end======-->
           <!--====== contact info item start======-->
           <div class="contact-info-item padd-15">
             <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
-            <h4>office</h4>
-            <p>MCTI</p>
+            <h4>Address</h4>
+            <p>#1 Maya Lane Liberty Homes Cupang Muntinlupa City</p>
           </div>
           <!--======== contact info item end ========->
           <!-======== contact info item start========-->
