--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <!--======== CSS Files ========-->
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/skins/color-1.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- =======Stye Switcher======= -->
   <link rel="stylesheet" href="css/skins/color-1.css" class="alternate-style" title="color-1" disabled>
   <link rel="stylesheet" href="css/skins/color-2.css" class="alternate-style" title="color-2" disabled>
@@ -319,85 +318,82 @@
           </div>
         </div>
         <div class="row">
-          <div class="gallery">
-  <!--======== portfolio item start ========-->
-  <div class="portfolio-item padd-15">
-    <div class="portfolio-item-inner shadow-dark">
-      <div class="portfolio-img">
-        <img src="images/certificate.jpg" alt="">
-      </div>
-    </div>
-  </div>
-  <!--======== portfolio item end ========-->
-  <!--======== portfolio item start ========-->
-  <div class="portfolio-item padd-15">
-    <div class="portfolio-item-inner shadow-dark">
-      <div class="portfolio-img">
-        <img src="images/Certificate_for_Introduction_to_Logic_(June_2022)-CA_18926 (1)1024_1.jpg" alt="">
-      </div>
-    </div>
-  </div>
-  <!--========= portfolio item end =========-->
-  <!--========= portfolio item start =========-->
-  <div class="portfolio-item padd-15">
-    <div class="portfolio-item-inner shadow-dark">
-      <div class="portfolio-img">
-        <img src="images/certificate-sparta-new.jpg" alt="">
-      </div>
-    </div>
-  </div>
-  <!--========= portfolio item end =========-->
-  <!--========= portfolio item start =========-->
-  <div class="portfolio-item padd-15">
-    <div class="portfolio-item-inner shadow-dark">
-      <div class="portfolio-img">
-        <img src="images/Certificate_for_Business_Analytics_Concepts_and_Frameworks_(July_2022)-CA_19571.jpg" alt="">
-      </div>
-    </div>
-  </div>
-  <!--========= portfolio item end =========-->
-  <!--========= portfolio item start =========-->
-  <div class="portfolio-item padd-15">
-    <div class="portfolio-item-inner shadow-dark">
-      <div class="portfolio-img">
-        <img src="images/excelskills.jpg" alt="">
-      </div>
-    </div>
-  </div>
-  <!--======== portfolio item end ========-->
-   <!--========= portfolio item start =========-->
-   <div class="portfolio-item padd-15">
-    <div class="portfolio-item-inner shadow-dark">
-      <div class="portfolio-img">
-        <img src="images/sql.jpg" alt="">
-      </div>
-    </div>
-  </div>
-  <!--======== portfolio item end ========-->
-   <!--========= portfolio item start =========-->
-   <div class="portfolio-item padd-15">
-    <div class="portfolio-item-inner shadow-dark">
-      <div class="portfolio-img">
-        <img src="images/data governance.png" alt="">
-      </div>
-    </div>
-  </div>
-  <!--======== portfolio item end ========-->
-  <!--======== portfolio item start ========-->
-  <div class="portfolio-item padd-15">
-    <div class="portfolio-item-inner shadow-dark">
-      <div class="portfolio-img">
-        <img src="images/sparta11024_1.jpg" alt="">
-      </div>
-    </div>
-  </div>
-  <!--======== portfolio item end ========-->
-</div>
-</div>
-</section>
-<!--======== portfolio section end ========-->
+          <!--======== portfolio item start ========-->
+          <div class="portfolio-item padd-15">
+            <div class="portfolio-item-inner shadow-dark">
+              <div class="portfolio-img">
+                <img src="images/certificate.jpg" alt="">
+              </div>
+            </div>
           </div>
-        
+          <!--======== portfolio item end ========-->
+          <!--======== portfolio item start ========-->
+          <div class="portfolio-item padd-15">
+            <div class="portfolio-item-inner shadow-dark">
+              <div class="portfolio-img">
+                <img src="images/Certificate_for_Introduction_to_Logic_(June_2022)-CA_18926 (1)1024_1.jpg" alt="">
+              </div>
+            </div>
+          </div>
+          <!--========= portfolio item end =========-->
+          <!--========= portfolio item start =========-->
+          <div class="portfolio-item padd-15">
+            <div class="portfolio-item-inner shadow-dark">
+              <div class="portfolio-img">
+                <img src="images/certificate-sparta-new.jpg" alt="">
+              </div>
+            </div>
+          </div>
+          <!--========= portfolio item end =========-->
+          <!--========= portfolio item start =========-->
+          <div class="portfolio-item padd-15">
+            <div class="portfolio-item-inner shadow-dark">
+              <div class="portfolio-img">
+                <img src="images/Certificate_for_Business_Analytics_Concepts_and_Frameworks_(July_2022)-CA_19571.jpg" alt="">
+              </div>
+            </div>
+          </div>
+          <!--========= portfolio item end =========-->
+          <!--========= portfolio item start =========-->
+          <div class="portfolio-item padd-15">
+            <div class="portfolio-item-inner shadow-dark">
+              <div class="portfolio-img">
+                <img src="images/excelskills.jpg" alt="">
+              </div>
+            </div>
+          </div>
+          <!--======== portfolio item end ========-->
+           <!--========= portfolio item start =========-->
+           <div class="portfolio-item padd-15">
+            <div class="portfolio-item-inner shadow-dark">
+              <div class="portfolio-img">
+                <img src="images/sql.jpg" alt="">
+              </div>
+            </div>
+          </div>
+          <!--======== portfolio item end ========-->
+           <!--========= portfolio item start =========-->
+           <div class="portfolio-item padd-15">
+            <div class="portfolio-item-inner shadow-dark">
+              <div class="portfolio-img">
+                <img src="images/data governance.png" alt="">
+              </div>
+            </div>
+          </div>
+          <!--======== portfolio item end ========-->
+          <!--======== portfolio item start ========-->
+          <div class="portfolio-item padd-15">
+            <div class="portfolio-item-inner shadow-dark">
+              <div class="portfolio-img">
+                <img src="images/sparta11024_1.jpg" alt="">
+              </div>
+            </div>
+          </div>
+          <!--======== portfolio item end ========-->
+        </div>
+      </div>
+    </section>
+    <!--======== portfolio section end ========-->
     <!--======== contact section start ========-->
     <section class="contact section" id="contacts">
       <div class="container">
@@ -508,9 +504,5 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
   <script src="js/script.js"></script>
   <script src="js/style-switcher.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
-  <script>
-    lightGallery(document.querySelector(".gallery"));
-  </script>
 </body>
 </html>
